[package]
name = "someip-helloworld"
version = "0.1.0"
description = "Rust SomeIP demo client implementation for the CommonAPI-Examples E01HelloWorld."
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_someip = { version = "0.2", features = ["derive", "bytes"] }
someip_parse = { git = "https://github.com/JulianSchmid/someip-parse-rs.git" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
